# feltpy

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  examples.ipynb  pyproject.toml
docs/source/: conf.py  index.rst  usage.rst
feltpy/: __init__.py  feltpy.py
