[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "feltpy"
version = "0.0.1"
authors = [
  { name="David Moss", email="davidmoss1221@gmail.com" },
]
description = "A package for interacting with the API of Felt.com"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "re",
    "os",
    "geopandas"
]

[project.urls]
"Homepage" = "https://github.com/moss-xyz/feltpy"
"Bug Tracker" = "https://github.com/moss-xyz/feltpy/issues"